<resources>
    <string name="app_name">ArtistApp</string>
    <string name="artist_name">A.R.Rahman</string>
    <string name="contact">Contact #: +91-9849869767</string>
    <string name="likes">Likes: Music, Guitar, Drums</string>
    <string name="dislikes">Dislikes: Failure</string>
    <string name="dob">Date of Birth: Jan 06, 1967</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_videos">VideosActivity</string>
    <string name="title_activity_images">ImagesActivity</string>
    <string name="title_activity_mailing_list">MailingListActivity</string>
    <string name="song1">Sakhi</string>
    <string name="song2">Roja</string>
    <string name="video1">Maa Tujhe Salaam</string>
    <string name="video2">Roobaroo (Sad)</string>
    <string name="title_activity_wallpapers">WallpapersActivity</string>
    <string name="mailingList">Wanna be on my email list.....</string>
    <string name="openEmail">Open Email</string>
</resources>
