<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivityFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/artist_name"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/colorButton"/>

            <Button
                android:id="@+id/button_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="6dp"
                android:text="Website"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#607D8B"
                android:textColor="@color/colorButton"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#607D8B"
                android:textColor="@color/colorButton"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/likes"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#607D8B"
                android:textColor="@color/colorButton"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dislikes"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#607D8B"
                android:textColor="@color/colorButton"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dob"
                android:textSize="14dp" />

            <ImageButton
                android:id="@+id/button_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Follow Rahman @ Facebook"
                android:src="@drawable/facebook"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|bottom"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button_music"
                    android:layout_width="160sp"
                    android:layout_height="wrap_content"
                    android:text="Songs" />

                <Button
                    android:id="@+id/button_videos"
                    android:layout_width="160sp"
                    android:layout_height="wrap_content"
                    android:text="Videos" />
                <Button
                    android:id="@+id/button_images"
                    android:layout_width="160sp"
                    android:layout_height="wrap_content"
                    android:text="Wallpapers" />

                <Button
                    android:id="@+id/button_mailing_list"
                    android:layout_width="160sp"
                    android:layout_height="wrap_content"
                    android:text="MailingList" />
            </LinearLayout>
        </LinearLayout>



</LinearLayout>
